# ebb

./: README.md  flake.nix  pyproject.toml
ebb/: cli.py  query.py  wave.py
nix/modules/: waved.nix
nix/pkgs/: ebb.nix  waved.nix
nix/systems/hetzner/: config.nix  ebb.nix
